# pacs

Challenges/: CMakeLists.txt  Makefile  include2  lib2
Challenges/include/: edge.hpp  mesh.hpp  point.hpp  triangle.hpp
Challenges/src/: mainMesh.cpp
